--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
+    "antd": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
